# learn-robo

./: .gitignore
Project_1/RoboND-Rover-Project/: README.md  writeup.md  writeup_template.md
Project_1/RoboND-Rover-Project/code/: decision.py  drive_rover.py  perception.py  play.py
Project_1/RoboND-Rover-Project/code/.ipynb_checkpoints/: Rover_Project_Test_Notebook-checkpoint.ipynb
Project_2/: writeup.md
Project_2/scripts/: IK_debug.py  IK_server.py  fk.py
Project_3/: .capture_features.py.swp  .object_recognition.py.swp  .project_template.py.swp  .train_svm.py.swp  README.md  capture_features.py  object_recognition.py  output_1.yaml  output_2.yaml  output_3.yaml  project_template.py  segmentation.py  train_svm.py
Project_4/: README.md  config_model_weights.h5  model_training.ipynb
home_robot/: launch.sh  test_nav.sh  test_slam.sh
home_robot/src/add_markers/: CMakeLists.txt
home_robot/src/config/: marker_config.yaml
home_robot/src/pick_objects/: CMakeLists.txt
home_robot/src/scripts/: add_marker.sh  home_service.sh  pick_objects.sh  test.sh  test_nav.sh  test_slam.sh
home_robot_16/: test.sh
new_prj_1/model/building/: model.sdf
new_prj_1/model/cart/: model.sdf
new_prj_1/script/: welcome.cpp
new_prj_1/world/: littleMaze.world
new_prj_2/src/ball_chaser/: CMakeLists.bak.txt  package.xml
new_prj_2/src/my_robot/: package.xml
new_prj_3/: test.sh
new_prj_3/my_ball/: model.sdf
new_prj_3/src/ball_chaser/: CMakeLists.txt
new_prj_3/src/ball_chaser/launch/: ball_chaser.launch
new_prj_3/src/ball_chaser/src/: drive_bot.cpp  process_image.cpp
(+29 files in other folders)
